--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.5.0",
     "@tanstack/react-query": "^5.64.2",
+    "@tanstack/react-query-devtools": "^5.65.1",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -27,8 +28,10 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.15.1",
     "react-router-dom": "^7.1.3",
     "react-select": "^5.9.0",
+    "react-spinners": "^0.15.0",
     "sweetalert2": "^11.15.10",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
