--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
@@ -34,6 +35,7 @@
     "react-select": "^5.9.0",
     "react-spinners": "^0.15.0",
     "sweetalert2": "^11.15.10",
+    "swiper": "^11.2.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
