--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@stripe/react-stripe-js": "^3.1.1",
@@ -35,6 +36,7 @@
     "react-router-dom": "^7.1.3",
     "react-select": "^5.9.0",
     "react-spinners": "^0.15.0",
+    "recharts": "^2.15.3",
     "sweetalert2": "^11.15.10",
     "swiper": "^11.2.4",
     "tailwind-merge": "^2.6.0",
